# compiler-practice

./: .gitignore  CMakeLists.txt  memcheck.sh  valgrind-report.txt
include/: definitions.h  exceptions.h  lexer.h  parser.h  utils.h
src/: diagnostics.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  utils.h
